<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        tools:context=".MainActivity">



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color">




        <TextView
            android:id="@+id/overallscoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/overallscore"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/childContainer1CV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintTop_toBottomOf="@+id/overallscoreTxt">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/childContainerFirstCl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/graphContainerTitleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/abyssinica_sil"
                    android:text="@string/overallscore"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/graphContainerTitle2Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/average"
                    android:textColor="@color/textOrange"
                    android:textSize="17dp"
                    android:fontFamily="sans-serif-condensed"
                    app:layout_constraintEnd_toEndOf="@+id/graphContainerTitleTxt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/graphContainerTitleTxt" />


                <TextView
                    android:id="@+id/graphContainerText3Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:text="@string/searchVolume"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textColor="@color/grey"
                    app:layout_constraintEnd_toStartOf="@+id/graphContainerText5Txt"
                    app:layout_constraintHorizontal_bias="0.015"
                    app:layout_constraintStart_toStartOf="@+id/graphContainerTitleTxt"
                    app:layout_constraintTop_toBottomOf="@+id/graphContainerTitle2Txt" />

                <TextView
                    android:id="@+id/graphContainerText4Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hight"
                    android:textColor="@color/textGreen"
                    android:textSize="17dp"
                    android:fontFamily="sans-serif-condensed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/graphContainerTitleTxt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/graphContainerText3Txt" />

                <TextView
                    android:id="@+id/graphContainerText5Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/competition"
                    android:textSize="20dp"
                    android:textColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />

                <TextView
                    android:id="@+id/graphContainerText6Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/hight"
                    android:textColor="@color/textRed"
                    android:textSize="17dp"
                    android:fontFamily="sans-serif-condensed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/graphContainerText5Txt"
                    app:layout_constraintTop_toBottomOf="@+id/graphContainerText5Txt" />


                <TextView
                    android:id="@+id/progressRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="24dp"
                    android:text="53/100"
                    android:textSize="15sp"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circular_shape"
                    android:indeterminate="false"
                    android:progress="50"
                    android:progressDrawable="@drawable/custom_progress"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title2TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textSize="15sp"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintTop_toBottomOf="@+id/childContainer1CV" />


        <androidx.cardview.widget.CardView
            android:id="@+id/childContainer2CV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title2TV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/titleContainerCL"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:layout_constraintTop_toBottomOf="@+id/title2TV">

                <ScrollView
                    android:id="@+id/titleScroll"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/titleLL"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/titleTXT"
                        android:textSize="15sp"
                        android:textColor="@color/grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </ScrollView>

                <LinearLayout
                    android:id="@+id/titleLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:id="@+id/titleCopyButton"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/blue"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Copy" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight=".005"
                        android:background="@color/blackgrey" />



                    <TextView
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:id="@+id/titleShareButton"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/blue"
                        android:text="Share" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title3TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/descrption"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/childContainer2CV" />


        <androidx.cardview.widget.CardView
            android:id="@+id/childContainer3CV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title3TV">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/descriptionLL"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:textColor="@color/grey"
                        android:id="@+id/descriptionTXT"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </ScrollView>

                <LinearLayout
                    android:id="@+id/descriptionLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">





                    <TextView
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:id="@+id/descriptionCopyButton"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:text="Copy" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight=".005"
                        android:background="@color/blackgrey" />



                        <TextView
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:layout_weight=".5"
                            android:id="@+id/descriptionShareButton"
                            android:layout_width="0dp"
                            android:gravity="center"
                            android:textColor="@color/blue"
                            android:textSize="15sp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Share" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/childContainer3CV"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>